apps/media/flaresolverr/flaresolverr-middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: flaresolverr-strip
  namespace: media
spec:
  stripPrefix:
    prefixes:
      - /flaresolverr
