apps/media/flaresolverr/flaresolverr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/flaresolverr`)
      kind: Rule
      middlewares:
        - name: flaresolverr-strip
      services:
        - name: flaresolverr
          port: 8191
